# ps4-control-remote

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
installer/: ps4ControlrRemote.iss
src/: focus_win32.c  focus_win32.h  main.c  output_vigem_x360_dyn.c  output_vigem_x360_dyn.h  ps4.c  ps4.h  xinput_map.h
